--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/generic?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/generic?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.datasource.username=root
@@ -6,4 +6,3 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
-
