--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-	id 'org.springframework.boot' version '2.5.5'
+	id 'org.springframework.boot' version '2.5.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'com.generic'
@@ -15,36 +16,38 @@ configurations {
 
 }
 
-
-ext {
-	set('springCloudVersion', "2020.0.4")
-}
-
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.46'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'io.jsonwebtoken:jjwt:0.9.0'
+	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation group: 'mysql', name: 'mysql-connector-java'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.18.1'
+	/*
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '3.0.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-actuator', version: '2.5.6'
+	*/
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.7'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	// https://mvnrepository.com/artifact/com.h2database/h2
+	testImplementation group: 'com.h2database', name: 'h2', version: '2.0.202'
+
 
 }
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
-}
+
 
 test {
 	useJUnitPlatform()
